Initital java 10